// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixtures CLI Output - five-players-three-rounds-start-two-bottom-up-format-text-with-matches.json 1`] = `
"# Matches

**Round 3**

1. BYE vs Elvis
2. David vs Bob
3. Charlie vs Alice

**Round 4**

1. BYE vs David
2. Elvis vs Alice
3. Charlie vs Bob
"
`;

exports[`Fixtures CLI Output - four-players-bottom-up.csv 1`] = `
"**Round 1**

1. Player4 vs Player3
2. Player2 vs Player1
"
`;

exports[`Fixtures CLI Output - four-players-bottom-up.json 1`] = `
"**Round 1**

1. Player4 vs Player3
2. Player2 vs Player1
"
`;

exports[`Fixtures CLI Output - four-players-bottom-up.txt 1`] = `
"**Round 1**

1. Player4 vs Player3
2. Player2 vs Player1
"
`;

exports[`Fixtures CLI Output - four-players-top-down.csv 1`] = `
"**Round 1**

1. Player1 vs Player2
2. Player3 vs Player4
"
`;

exports[`Fixtures CLI Output - four-players-top-down.json 1`] = `
"**Round 1**

1. Player1 vs Player2
2. Player3 vs Player4
"
`;

exports[`Fixtures CLI Output - four-players-top-down.txt 1`] = `
"**Round 1**

1. Player1 vs Player2
2. Player3 vs Player4
"
`;

exports[`Fixtures CLI Output - four-players-with-matches-bottom-up.csv 1`] = `
"**Round 1**

1. Player4 vs Player2
2. Player3 vs Player1
"
`;

exports[`Fixtures CLI Output - four-players-with-matches-bottom-up.json 1`] = `
"**Round 1**

1. Player4 vs Player2
2. Player3 vs Player1
"
`;

exports[`Fixtures CLI Output - four-players-with-matches-bottom-up.txt 1`] = `
"**Round 1**

1. Player4 vs Player2
2. Player3 vs Player1
"
`;

exports[`Fixtures CLI Output - four-players-with-matches-top-down.csv 1`] = `
"**Round 1**

1. Player1 vs Player3
2. Player2 vs Player4
"
`;

exports[`Fixtures CLI Output - four-players-with-matches-top-down.json 1`] = `
"**Round 1**

1. Player1 vs Player3
2. Player2 vs Player4
"
`;

exports[`Fixtures CLI Output - four-players-with-matches-top-down.txt 1`] = `
"**Round 1**

1. Player1 vs Player3
2. Player2 vs Player4
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R6-1-unmodified.txt 1`] = `
"**Round 6**

1. Morgath vs Pauldog
2. Nzdaemon vs GreyGhost
3. Saravock vs lilme
4. Arlo vs Colain
5. armydan vs LCYig
6. iso.evil vs Clin
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R6-1-unmodified-bottom-up.csv 1`] = `
"**Round 6**

1. LCYig vs armydan
2. Clin vs iso.evil
3. Colain vs Arlo
4. GreyGhost vs Nzdaemon
5. Pauldog vs Morgath
6. lilme vs Saravock
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R6-1-unmodified-bottom-up.json 1`] = `
"**Round 6**

1. LCYig vs armydan
2. Clin vs iso.evil
3. Colain vs Arlo
4. GreyGhost vs Nzdaemon
5. Pauldog vs Morgath
6. lilme vs Saravock
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R6-1-unmodified-bottom-up.txt 1`] = `
"**Round 6**

1. LCYig vs armydan
2. Clin vs iso.evil
3. Colain vs Arlo
4. GreyGhost vs Nzdaemon
5. Pauldog vs Morgath
6. lilme vs Saravock
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R6-2-win-gg.txt 1`] = `
"**Round 6**

1. Morgath vs Pauldog
2. Nzdaemon vs GreyGhost
3. Saravock vs lilme
4. Arlo vs Colain
5. armydan vs LCYig
6. iso.evil vs Clin
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R6-3-win-ad.txt 1`] = `
"**Round 6**

1. Morgath vs armydan
2. Nzdaemon vs Pauldog
3. Saravock vs lilme
4. Arlo vs LCYig
5. GreyGhost vs Colain
6. iso.evil vs Clin
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R6-4-draw.txt 1`] = `
"**Round 6**

1. Morgath vs Pauldog
2. Nzdaemon vs GreyGhost
3. Saravock vs lilme
4. Arlo vs Colain
5. armydan vs LCYig
6. iso.evil vs Clin
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R7.txt 1`] = `
"**Round 7**

1. Morgath vs armydan
2. Nzdaemon vs Pauldog
3. Saravock vs Colain
4. lilme vs iso.evil
5. Arlo vs LCYig
6. GreyGhost vs Clin
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R8-1-unmodified.txt 1`] = `
"**Round 8**

1. Nzdaemon vs armydan
2. Morgath vs Colain
3. Saravock vs LCYig
4. Arlo vs iso.evil
5. lilme vs GreyGhost
6. Pauldog vs Clin
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R8-1-unmodified-team-names.csv 1`] = `
"**Round 8**

1. Howl-Terrroa vs The High Life
2. Morgath Marauders vs The Good Runts
3. Kabal of Khaine vs Lyzyrd Skyzyrd
4. Under Where? vs Mean & Green
5. Friendly Unit vs Dark Accolytes
6. The Barrowtown Brawlers vs AttackAttack
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R8-1-unmodified-team-names.txt 1`] = `
"**Round 8**

1. Howl-Terrroa vs The High Life
2. Morgath Marauders vs The Good Runts
3. Kabal of Khaine vs Lyzyrd Skyzyrd
4. Under Where? vs Mean & Green
5. Friendly Unit vs Dark Accolytes
6. The Barrowtown Brawlers vs AttackAttack
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R8-2-m-win-or-draw.txt 1`] = `
"**Round 8**

1. Morgath vs LCYig
2. Nzdaemon vs Colain
3. Saravock vs GreyGhost
4. Arlo vs armydan
5. lilme vs iso.evil
6. Pauldog vs Clin
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R8-2-m-win-or-draw-team-names.csv 1`] = `
"**Round 8**

1. Morgath Marauders vs Mean & Green
2. Howl-Terrroa vs The Good Runts
3. Kabal of Khaine vs Lyzyrd Skyzyrd
4. Under Where? vs The High Life
5. Friendly Unit vs Dark Accolytes
6. The Barrowtown Brawlers vs AttackAttack
"
`;

exports[`Fixtures CLI Output - hawbbl24S2R8-2-m-win-or-draw-team-names.txt 1`] = `
"**Round 8**

1. Morgath Marauders vs Mean & Green
2. Howl-Terrroa vs The Good Runts
3. Kabal of Khaine vs Lyzyrd Skyzyrd
4. Under Where? vs The High Life
5. Friendly Unit vs Dark Accolytes
6. The Barrowtown Brawlers vs AttackAttack
"
`;

exports[`Fixtures CLI Output - three-players-bottom-up.csv 1`] = `
"**Round 1**

1. BYE vs Player3
2. Player2 vs Player1
"
`;

exports[`Fixtures CLI Output - three-players-bottom-up.json 1`] = `
"**Round 1**

1. BYE vs Player3
2. Player2 vs Player1
"
`;

exports[`Fixtures CLI Output - three-players-bottom-up.txt 1`] = `
"**Round 1**

1. BYE vs Player3
2. Player2 vs Player1
"
`;

exports[`Fixtures CLI Output - three-players-top-down.csv 1`] = `
"**Round 1**

1. Player1 vs Player2
2. Player3 vs BYE
"
`;

exports[`Fixtures CLI Output - three-players-top-down.json 1`] = `
"**Round 1**

1. Player1 vs Player2
2. Player3 vs BYE
"
`;

exports[`Fixtures CLI Output - three-players-top-down.txt 1`] = `
"**Round 1**

1. Player1 vs Player2
2. Player3 vs BYE
"
`;

exports[`Fixtures CLI Output - three-players-with-matches-bottom-up.csv 1`] = `
"**Round 1**

1. BYE vs Player2
2. Player3 vs Player1
"
`;

exports[`Fixtures CLI Output - three-players-with-matches-bottom-up.json 1`] = `
"**Round 1**

1. BYE vs Player2
2. Player3 vs Player1
"
`;

exports[`Fixtures CLI Output - three-players-with-matches-bottom-up.txt 1`] = `
"**Round 1**

1. BYE vs Player2
2. Player3 vs Player1
"
`;

exports[`Fixtures CLI Output - three-players-with-matches-top-down.csv 1`] = `
"**Round 1**

1. Player1 vs Player3
2. Player2 vs BYE
"
`;

exports[`Fixtures CLI Output - three-players-with-matches-top-down.json 1`] = `
"**Round 1**

1. Player1 vs Player3
2. Player2 vs BYE
"
`;

exports[`Fixtures CLI Output - three-players-with-matches-top-down.txt 1`] = `
"**Round 1**

1. Player1 vs Player3
2. Player2 vs BYE
"
`;
